--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -32,7 +32,7 @@ const projects = [
     tech: ["C", "Inter-process Communication"],
     github: "https://github.com/t0msly3r/Pipex",
     demo: null,
-    image: "./public/projects/pipe.png"
+    image: "./projects/pipe.png"
   }
 ];
 ---
