--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,7 +8,7 @@ const projects = [
     tech: ["C", "Memory Management", "Algorithms"],
     github: "https://github.com/t0msly3r/push_swap",
     demo: null,
-    image: "./public/projects/push_swap.gif"
+    image: "./projects/push_swap.gif"
   },
   {
     title: "VectorStl",
@@ -16,7 +16,7 @@ const projects = [
     tech: ["C++", "OOP"],
     github: "https://github.com/t0msly3r/Stl_vector",
     demo: null,
-    image: "./public/projects/Vector-in-C.png"
+    image: "./projects/Vector-in-C.png"
   },
   {
     title: "Philosophers Problem",
@@ -24,7 +24,7 @@ const projects = [
     tech: ["C", "Multithreading", "Synchronization"],
     github: "https://github.com/t0msly3r/philosophers",
     demo: null,
-    image: "./public/projects/philo.png"
+    image: "./projects/philo.png"
   },
   {
     title: "Pipe Implementation",
