--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Skills from '../components/Skills.astro';
 import Projects from '../components/Projects.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
+import Studies from '../components/Studies.astro';
 ---
 
 <Layout title="Tomas Fiz - Portfolio">
@@ -14,8 +15,9 @@ import Footer from '../components/Footer.astro';
   <main>
     <Hero />
     <About />
+	<Studies />
+	<Projects />
     <Skills />
-    <Projects />
     <Contact />
   </main>
   <Footer />
